# mia_test

./: .gitignore  README.md  VERCEL_DEPLOYMENT.md  implementation_plan.txt
market-intel-agent-main-reference/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  envExample.txt  main.py  plan.txt  pyproject.toml  render.yaml  requirements.txt
market-intel-agent-main-reference/.cursor/plans/: fix_groq_413_comprehensive.plan.md
market-intel-agent-main-reference/alembic/: env.py
market-intel-agent-main-reference/alembic/versions/: a7a0c26c2328_initial_migration.py
market-intel-agent-main-reference/api/: __init__.py  index.py
market-intel-agent-main-reference/chroma/: chroma_telemetry_patch.py  client.py  collection.py
market-intel-agent-main-reference/core/: logger.py  prompts.py  settings.py  validators.py
market-intel-agent-main-reference/embeddings/: chunker.py  model.py
market-intel-agent-main-reference/examples/: test_blackwell_mission.py
market-intel-agent-main-reference/frontend/: README.md  global.d.ts  package.json  tsconfig.json  vercel.json
market-intel-agent-main-reference/frontend/app/: layout.tsx  page.tsx
market-intel-agent-main-reference/models/: __init__.py  base.py  conversation.py  message.py  mission_log.py
market-intel-agent-main-reference/routers/: agent.py  chat.py  documents.py
market-intel-agent-main-reference/services/: agent_service.py  ai_service.py  document_service.py  email_service.py  login_service.py  notion_service.py  rag_service.py  scraper_service.py  search_service.py
(+36 files in other folders)
